Finished the remote_scanner script

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,28 @@
+# Environment variables (contains secrets!)
 .env
+.env.local
+.env.*.local
+
+# Virtual environments
+.venv/
+venv/
+ENV/
+
+# Python cache
+__pycache__/
+*.py[cod]
+*$py.class
+*.pyo
+
+# Generated output files
+inventory.json
+
+# IDE settings
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# OS files
+.DS_Store
+Thumbs.db
